syntax = "proto3";

option go_package = "go-api-grpc/pb/transaction";

package transaction;

service Transaction {
  rpc Create (CreateRequest) returns (Response) {}
  rpc List (ListRequest) returns (ResponseList) {}
}

message CreateRequest {
  string FromAccount = 1;
  string ToAccount = 2;
  double Amount = 3;
}

message ListRequest {
  string UserID = 1;
  int64 Page = 2;
  int64 PerPage = 3;
}

message Response {
  string ID = 1;
  string FromAccount = 2;
  string ToAccount = 3;
  double Amount = 4;
  string Currency = 5;
  string CreatedAt = 6;
}

message ResponseList {
  repeated Response Data = 1;
  int64 Page = 2;
  int64 PerPage = 3;
  int64 TotalPage = 4;
  int64 TotalRecords = 5;
}